Added spotbugs for @NonNull annotations