@@ -14,6 +14,7 @@
         <lavaplayer.version>1.3.78</lavaplayer.version>
         <log4j.version>2.24.1</log4j.version>
         <lombok.version>1.18.36</lombok.version>
+        <spotbugs.version>4.8.6</spotbugs.version>
 
         <maven.compiler.source>21</maven.compiler.source><!-- don't forget system.properties!-->
         <maven.compiler.target>21</maven.compiler.target>
@@ -44,6 +45,13 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>${spotbugs.version}</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -122,6 +130,7 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <release>${maven.compiler.release}</release>
+                    <compilerArgs>-proc:full</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
